--- a/QuantumTechnicianApp/CanvasManifest.json
+++ b/QuantumTechnicianApp/CanvasManifest.json
@@ -116,7 +116,7 @@
     "Id": "9d662df8-091d-4444-8272-05db92ce280a",
     "InstrumentationKey": "",
     "ManualOfflineProfileId": "",
-    "Name": "Technician App QUAL Environment",
+    "Name": "Technician App DEV Environment",
     "OriginatingVersion": "1.331",
     "ParserErrorCount": 0,
     "ShowStatusBar": false
