--- a/QuantumQQTeamApp/CanvasManifest.json
+++ b/QuantumQQTeamApp/CanvasManifest.json
@@ -102,7 +102,7 @@
     "Author": "",
     "BindingErrorCount": 0,
     "ContainsThirdPartyPcfControls": false,
-    "DefaultConnectedDataSourceMaxGetRowsCount": 500,
+    "DefaultConnectedDataSourceMaxGetRowsCount": 2000,
     "DocumentAppType": "DesktopOrTablet",
     "DocumentLayoutHeight": 768,
     "DocumentLayoutLockOrientation": false,
@@ -122,7 +122,7 @@
     "ShowStatusBar": false
   },
   "PublishInfo": {
-    "AppName": "QQ Team App QUAL Environment",
+    "AppName": "QQTeam App DEV Environment",
     "BackgroundColor": "RGBA(0,176,240,1)",
     "IconColor": "RGBA(255,255,255,1)",
     "IconName": "Edit",
