--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -1639,6 +1639,17 @@ LeadScreen As screen:
                                 SHFPEstimates,
                                 Estimate = txtinptestimatenumber.Text
                             )
+                        ) || !IsBlank(
+                            LookUp(
+                                SHFPEstimates,
+                                Estimate = txtinptestimatenumber.Text && 'Lead Generator Id' = VarSelectedLead.TechnicianID && JobStatus = "Sold" && BookingDate <> Blank() ||
+                                !IsBlank(
+                            LookUp(
+                                SHFPEstimates,
+                                Estimate = txtinptestimatenumber.Text && 'Lead Generator Id' = VarSelectedLead.TechnicianID && JobStatus = "Open" && DateCreated <> Blank()
+                            )
+                        )
+                            )
                         ),
                         Set(
                             FlagEstimateNumberFound,
@@ -1697,7 +1708,7 @@ LeadScreen As screen:
                     );
                     Set(
                         VarPopUpEstimateNumberSubmittedmsg,
-                        "Estimate number of this lead is not found in FP Estimate file, Estimate number is saved successfully. Incentives will be calculated in the next processing cycle of FPEstimate file."
+                        "Estimate Number is saved. Incentives will be calculated in the next iteration."
                     );
                     Set(
                         VarPopUpEstimateNumberSubmitted,
@@ -1860,7 +1871,7 @@ LeadScreen As screen:
                 //Set(VarPopUpEstimateNumber,false);
                 Set(
                         VarPopUpEstimateNumberSubmittedmsg,
-                        "Incentives updated for the estimateId " & LookUp(
+                        "Incentives updated for the Estimate # " & LookUp(
                             LeadInformations,
                             ID = VarSelectedLead.ID,
                             LeadEstimateNumber
