--- a/QuantumQQTeamApp/CanvasManifest.json
+++ b/QuantumQQTeamApp/CanvasManifest.json
@@ -116,13 +116,13 @@
     "Id": "a2274f5f-f78c-407d-825c-ec1a769dffe8",
     "InstrumentationKey": "",
     "ManualOfflineProfileId": "",
-    "Name": "QQTeam App DEV Environment",
+    "Name": "QQ Team App QUAL Environment",
     "OriginatingVersion": "1.326",
     "ParserErrorCount": 0,
     "ShowStatusBar": false
   },
   "PublishInfo": {
-    "AppName": "QQTeam App DEV Environment",
+    "AppName": "QQ Team App QUAL Environment",
     "BackgroundColor": "RGBA(0,176,240,1)",
     "IconColor": "RGBA(255,255,255,1)",
     "IconName": "Edit",
