--- a/QuantumQQTeamApp/Src/App.fx.yaml
+++ b/QuantumQQTeamApp/Src/App.fx.yaml
@@ -40,19 +40,22 @@ App As appinfo:
                 Id: 1,
                 UserName: "QQTeam1",
                 Email: "schindlerqqteam1@schindler.com",
-                Password: "team1"
+                Password: "team1",
+                District:"D01"
             },
             {
                 Id: 2,
                 UserName: "QQTeam2",
-                Email: "schindlerqqteam2@schindler.com",
-                Password: "team2"
+                Email: "schindlerqqteam1@schindler.com",
+                Password: "team2",
+                District:"D02"
             },
             {
                 Id: 3,
                 UserName: "QQTeam3",
                 Email: "schindlerqqteam3@schindler.com",
-                Password: "team2"
+                Password: "team2",
+                District:"D03"
             }
         );
     Theme: =PowerAppsTheme
